--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
   --blue: #1e90ff;
   --white: #ffffff;
-  --orange: #fd4f00;
-  --dark-blue: #001233;
-  --beige: #EFE0CA;
+  --primary-color:#F0F0F0 ;
+  --background-color:#E7473C ;
+  --accent-color: #E7473C;
 }
 * {
   box-sizing: border-box;
@@ -100,14 +100,14 @@ a:hover{
 }
 a:after{
   color: red;
-} */
+} 
 
 
 /* Homepage css starts here */
 
 .background_color{
-  background-color:#001233;
-  color: #FD4F00;
+  background-color:var(--background-color);
+  color: var(--primary-color);
 }
 header {
   height: 5em;
@@ -134,7 +134,7 @@ footer {
 }
 
 main {
-  background-color:#001233;
+  background-color:var(--background-color);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -145,14 +145,14 @@ main {
 .sidebar{
   width: 16em;
   height: 100%;
-  background-color: #001233;
+  background-color: var(--background-color);
   display: flex;
 }
 
 .list_container{
   width: 60em;
   height: 100%;
-  background-color:  #001233;
+  background-color:  var(--background-color);
 }
 
 .welcome_text{
@@ -174,11 +174,11 @@ display: inline;
   height: 3em;
   border-radius: 50%;
   display: inline;
-  border: solid #EFE0CA 1px;
+  border: solid var(--accent-color) 1px;
 }
 .profile_pic:hover{
   transform: scale(0.5em,0.5em);
-  border: #FD4F00 solid 1px;
+  border: var(--primary-color) solid 1px;
 }
 .account_name{
   font-size: medium;
@@ -186,8 +186,8 @@ display: inline;
 }
 .days{
   width: 30em;
-  background-color: #001233;
-  color: #EFE0CA;
+  background-color: var(--background-color);
+  color: var(--accent-color);
   position: relative;
   top: 7em;
   right: 8em;
@@ -195,18 +195,18 @@ display: inline;
 .day_select{
   display: block;
   padding: 1em 3.5em 1em 3.5em;
-  color: #EFE0CA;
+  color: var(--primary-color);
   background-image: url(svgs/list-center-svgrepo-com.png);
   background-size: 20px;
   background-position: 10px 14px;
   background-repeat: no-repeat;
 }
 .day_select a{
-  color: #EFE0CA;
+  color: var(--accent-color);
 }
 
 .day_select:hover{
-background-color: #FD4F00;
+background-color: var(--primary-color);
 }
 .my_lists{
   color: #EFE0CA;
@@ -214,7 +214,7 @@ background-color: #FD4F00;
 
 
 .period{
-  color: #FD4F00;
+  color: var(--primary-color);
 }
 /* Tasks css */
 .tasks{
@@ -225,11 +225,11 @@ background-color: #FD4F00;
   width: 20em;
   height: 4em;
   border-radius: 4px;
-  background-color: var(--orange);
+  background-color: var(--primary-color);
   display: flex;
   text-align: center;
   margin: 10px;
-  color: #001233;
+  color: var(--background-color);
 }
 .task:hover{
   border: #fff solid 1px;
@@ -238,7 +238,6 @@ background-color: #FD4F00;
 .task_container{
   overflow: auto;
   height: 50rem;
-
 }
 .task_input{
   display: flex;
@@ -264,22 +263,22 @@ background-color: #FD4F00;
 
 /* Styling for the form within the modal */
 .task_form {
-  background-color: var(--orange);
+  background-color: var(--primary-color);
   margin: 15% auto;
   padding: 20px;
-  border: 1px solid var(--dark-blue);
+  border: 1px solid var(--background-color);
   width: 50em;
   height: 25em;
 }
 
 .task_form h2{
-  color: var(--dark-blue);
+  color: var(--background-color);
   text-align: center;
 }
 
 .task_input button{
   padding: 10px 20px;
-  background-color: var(--orange);
+  background-color: var(--primary-color);
   color: #fff;
   border: none;
   position: fixed;
@@ -292,13 +291,13 @@ background-color: #FD4F00;
 }
 .form_label{
   font-size: large;
-  background-color:var(--orange) ;
-  color: var(--dark-blue);
+  background-color:var(--primary-color) ;
+  color: var(--background-color);
 }
 input[type=text]{
   width: 100%;
   height: 5em;
-  background-color: #EFE0CA;
+  background-color: var(--accent-color);
   background-position: 10px 10px;
   background-repeat: no-repeat;
   padding-left: 30px;
@@ -311,10 +310,10 @@ input[type=textarea]{
   width: 100%;
   height: 10em;
   text-align: justify;
-  background-color: var(--beige);
+  background-color: var(--accent-color);
 }
 input[type=submit]{
-  background-color: var(--dark-blue);
+  background-color: var(--background-color);
   width: 6em;
 }
 .add_task_submit{
@@ -342,8 +341,8 @@ input[type=submit]{
 
 /* Dropdown Button */
 .dropbtn {
-  background-color: var(--dark-blue);
-  color: var(--beige);
+  background-color: var(--primary-color);
+  color: var(--accent-color);
   padding: 16px;
   font-size: 16px;
   border: none;
@@ -352,7 +351,7 @@ input[type=submit]{
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-  background-color: var(--orange);
+  background-color: var(--primary-color);
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -365,8 +364,8 @@ input[type=submit]{
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: var(--beige);
-  color: var(--orange);
+  background-color: var(--accent-color);
+  color: var(--primary-color);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -374,7 +373,7 @@ input[type=submit]{
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: var(--dark-blue);
+  color: var(--background-color);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -389,7 +388,7 @@ input[type=submit]{
 .round_checkbox{
   width: 1em;
   height: 1em;
-  border: solid 1px #001233;
+  border: solid 1px var(--background-color);
   border-radius: 50%;
   display: inline;
   margin: 1em;
@@ -398,7 +397,7 @@ input[type=submit]{
   border: #f1f1f1 solid 1px;
 }
 .round_checkbox:active{
-  background-color: #001233;
+  background-color: var(--background-color);
 }
 .task_name{
   margin: 1em;
@@ -408,8 +407,8 @@ input[type=submit]{
 .right_container{
   width: 27em;
   height: 100%;
-  background-color: #001233;
-  border: #FD4F00 solid 1px;
+  background-color: var(--background-color);
+  border: var(--primary-color) solid 1px;
 }
 .task_status_container{
   display: flex;
@@ -417,8 +416,8 @@ input[type=submit]{
 .task_status{
   width: 6em;
   height: 3em;
-  background-color: #EFE0CA;
-  color: #001233;
+  background-color: var(--accent-color);
+  color: var(--background-color);
   padding: 10px;
   margin: 10px;
   text-align: center;
@@ -427,7 +426,7 @@ input[type=submit]{
   position: relative;
 }
 .task_description{
-  background-color: #EFE0CA;
+  background-color: var(--accent-color);
   width: 25em;
   height: 10em;
   margin: 1em;
@@ -478,16 +477,16 @@ input[type=submit]{
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #FD4F00;
+  background: var(--primary-color);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #001233;
+  background: var(--background-color);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #EFE0CA;
+  background: var(--accent-color);
 }
 /* ----------------------------------------------Scrollbar end */
