--- a/style2.css
+++ b/style2.css
@@ -72,7 +72,11 @@ header {
     margin: 0;
     padding: 0;
     display: inline-block;
-    border-bottom:dotted black 1px;
+    border-bottom:solid black 1px;
+}
+header a{
+    color: var(--secondary-color);
+    margin-left: .5em;
 }
 header h2{
     color: var(--secondary-color);  
@@ -89,6 +93,12 @@ header h2{
     position: relative;
     display: inline-block;
 }
+.patterned-div {
+    width: 100%;
+    height: auto;
+    background-image: url(#pattern-5);
+    background-repeat: repeat;
+  }
   /* ------------------------------------------------------------ */
 
   /* --------------------Profile css------------------------------- */
@@ -136,6 +146,15 @@ header h2{
     color: var(--primary-color);
 }
 
+.my_day_container{
+    display: block;
+}
+.tomorrow_container{
+    display: none;
+}
+.this_week_container{
+    display: none;
+}
 /* -----------------------------Dropdown Button--------------------------- */
 .dropbtn {
     background-color: var(--primary-color);
@@ -187,6 +206,7 @@ header h2{
     display: inline-flex;
     width: 100%;
     height: 5em;
+    margin-left: .5em;
     color: var(--primary-color);
 }
 .period{
@@ -197,6 +217,8 @@ header h2{
 .add_task_button{
     width: 12em;
     height: 3em;
+    margin-bottom: 1em;
+    margin-left: 0.5em;
     background: var(--primary-color);
     color: var(--secondary-color);
 }
@@ -275,7 +297,7 @@ input[type=submit]{
     display: flex;
     text-align: center;
     margin: 10px;
-    color: var(--background-color);
+    color: var(--secondary-color);
 }
 .task:hover{
     border: #fff solid 1px;
@@ -287,13 +309,13 @@ input[type=submit]{
   .task_status{
     width: 6em;
     height: 3em;
-    background-color: var(--accent-color);
-    color: var(--background-color);
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     padding: 10px;
     margin: 10px;
     text-align: center;
     border-radius: 4px;
-    left: 3rem;
+    left: 2rem;
     position: relative;
   }
   .task_description{
