--- a/style.css
+++ b/style.css
@@ -1,492 +1,378 @@
+
 :root {
-  --blue: #1e90ff;
-  --white: #ffffff;
-  --primary-color:#F0F0F0 ;
-  --background-color:#E7473C ;
-  --accent-color: #E7473C;
-}
-* {
-  box-sizing: border-box;
-  /* background-color: #001233; */
-  color: var(--orange);
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-/* ----------------------------------------Header CSS------------------------- */
-header{
-  color: var(--orange);
-}
-
-/* =--------------------------------------------------- */
-body {
-  /* display: flex;
-  flex-direction: column; */
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-}
-
-
-/* Login page css */
-
-.main-content{
-    width: 80em;
-    height:40em;
-    position:relative;
-    border: 1px black solid;
-    border-radius: 5px;
-    margin: auto;
-    /* padding-top: 100px;
-    padding-left: 200px; */
-    background-color: #333;
-    top: 1em;
-    
+    --blue: #1e90ff;
+    --white: #ffffff;
+    --primary-color:#F0F0F0 ;
+    --secondary-color:#E7473C ;
+    --accent-color: #131b23;
   }
-.relative_class{
-  position: relative;
+*{
+    /* background-color: var(--primary-color); */
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-/*login page css starts here*/
-/* .logo{
-    width: 15em;
-    height: 15em;
-    display: flex;
-    margin: auto;
-    top: 1.5em;
+body{
+    font-size: 0;
+ 
+}  
+.display_inline{
+    display: inline;
 }
-.login_form{
-  top: 50px;
-  color: #fff;
-  width: 50em;
-  margin: auto;
-  font-size: 30x;
-} */
-/* Login input css starts here */
-/* input{
-  position: relative;
-  padding: 10px;
-  width: 20em;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  margin: auto;
-  border-radius: 1px;
-  background-color: black;
-  border: solid black 1px;
-  color: #fff;
-  left: 19.5em;
-}
-
-
-input[type=checkbox]{
-  left: 3em;
-  color: azure;
-}
-.checkbox_container {
-  display: inline-flex;
-  left: 10em;
-
-}
-
-/* Login input css ends here */
-#sub{
-  margin-left: 8em;
-  width: 60px;
-  top: 1em;
-}
-a{
-  text-decoration: none;
-}
+main div{
+    font-size: medium;
+}  
+a   {
+    text-decoration: none;
+    }
 a:hover{
-  color: red;
-}
+    color: red;
+    }
 a:after{
-  color: red;
-} 
-
-
-/* Homepage css starts here */
-
-.background_color{
-  background-color:var(--background-color);
-  color: var(--primary-color);
+    color: red;
+    }
+/* -----------------Container css----------------------- */
+.main_content{
+    font-size: 0;
+    width: 100%;
+    max-height: 30em;
+    display: flexbox;
 }
+.section{
+    display: inline-block;
+    height: 100%;
+    min-height: 35rem;
+    margin: 0;
+    border: solid  black;
+}
+.left_container{
+    
+    width: 23.33%;
+    box-sizing: border-box;
+    border-right: none;
+    position: relative;
+}
+.center_container{
+    
+    width: 43.33%;
+}
+.right_container{
+    background-color:var(--primary-color) ;
+    width: 32.33%;
+    border-left: none;
+    position: relative;
+}
+/* --------------------------------------------------------- */
+
+/* ------------------Header CSS----------------------------- */
 header {
-  height: 5em;
-  padding: 0.5em;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large;
+    height: 5rem;
+    width: 100%;
+    background-color: var(--primary-color);
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    border-bottom:solid black 1px;
+}
+header a{
+    color: var(--primary-color );
+    margin-left: .5em;
+}
+header h2{
+    color: var(--secondary-color);  
 }
 .header_buttons{
-  width: 25px;
-  height: 25px;
-  position: relative;
-  float: right;
-  bottom: 2em;
-  margin-left: 1em;
+    width: 2rem;
+    height: 2rem;
+    position: relative;
+    float: right;
+    bottom: 2em;
+    margin-right: 1em;
 }
 .settings_drop{
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
 }
+.patterned-div {
+    width: 100%;
+    height: auto;
+    background-image: url(#pattern-5);
+    background-repeat: repeat;
+  }
+  /* ------------------------------------------------------------ */
 
+  /* --------------------Profile css------------------------------- */
 
-footer {
-  padding: 10px;
-  text-align: center;
+.profile{
+    display: inline-flex;
 }
+.profile img{
+    width: 5em;
+    height: 5em;
+}
+.profile h2{
+    margin: 0;
+    padding: 0;
+}
+.profile a{
+    display: inline;
+    margin: 0;
+    padding: 0;
+}
+/* .................................................................. */
 
-main {
-  background-color:var(--background-color);
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.home_container{
-  display: flex;
-  color: white;
-}
-.sidebar{
-  width: 16em;
-  height: 100%;
-  background-color: var(--background-color);
-  display: flex;
-}
-
-.list_container{
-  width: 60em;
-  height: 100%;
-  background-color:  var(--background-color);
-}
-
-.welcome_text{
-  position: relative;
-  display: inline-flex;
-  width: 100%;
-  height: 5em;
-}
-
-.inline_class{
-display: inline;
-}
-
-/* Profile Picture */
-
-.profile_pic{
-  margin: 1em 1em ;
-  width: 3em;
-  height: 3em;
-  border-radius: 50%;
-  display: inline;
-  border: solid var(--accent-color) 1px;
-}
-.profile_pic:hover{
-  transform: scale(0.5em,0.5em);
-  border: var(--primary-color) solid 1px;
-}
-.account_name{
-  font-size: medium;
-  height: 10px;
-}
+/* -------------------Sidebar---------------------------------- */
 .days{
-  width: 30em;
-  background-color: var(--background-color);
-  color: var(--accent-color);
-  position: relative;
-  top: 7em;
-  right: 8em;
+    width: 100%;
+    position: relative;   
 }
 .day_select{
-  display: block;
-  padding: 1em 3.5em 1em 3.5em;
-  color: var(--primary-color);
-  background-image: url(svgs/list-center-svgrepo-com.png);
-  background-size: 20px;
-  background-position: 10px 14px;
-  background-repeat: no-repeat;
+    display: block;
+    padding: 1em 3.5em 1em 3.5em;
+    color: var(--primary-color);
+    background-image: url(svgs/list-center-svgrepo-com.png);
+    background-size: 2rem;
+    background-position: 10px 14px;
+    background-repeat: no-repeat;
+}
+.day_select:hover{
+    background-color: var(--primary-color);
+    .day_select a{
+        color: var(--secondary-color);
+    }    
 }
 .day_select a{
-  color: var(--accent-color);
+    color: var(--primary-color);
 }
 
-.day_select:hover{
-background-color: var(--primary-color);
+#myDayContainer{
+    display: block;
 }
-.my_lists{
-  color: #EFE0CA;
+#tomorrowContainer{
+    display: none;
 }
+#thisWeekContainer{
+    display: none;
+}
+.taskDisplayContainer{
+    width: 100%;
+    height: 25em;
 
+}
+/* -----------------------------Dropdown Button--------------------------- */
+.dropbtn {
+    background-color: var(--primary-color);
+    color: var(--accent-color);
+    padding: 0.5rem;
+    font-size: 16px;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  /* Dropdown button on hover & focus */
+  .dropbtn:hover, .dropbtn:focus {
+    background-color: var(--primary-color);
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--accent-color);
+    color: var(--primary-color);
+    min-width: 50%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: var(--background-color);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+ 
 
+/* --------------Center Container----------------------- */
+.welcome_text{
+    position: relative;
+    display: inline-flex;
+    width: 100%;
+    height: 5em;
+    margin-left: .5em;
+    color: var(--primary-color);
+}
 .period{
-  color: var(--primary-color);
-}
-/* Tasks css */
-.tasks{
-  padding: 10px;
-  width: 100%;
-}
-.task{
-  width: 20em;
-  height: 4em;
-  border-radius: 4px;
-  background-color: var(--primary-color);
-  display: flex;
-  text-align: center;
-  margin: 10px;
-  color: var(--background-color);
-}
-.task:hover{
-  border: #fff solid 1px;
+    color: var(--accent-color);
 }
 
-.task_container{
-  overflow: auto;
-  height: 50rem;
-}
-.task_input{
-  display: flex;
-} 
+    /* -------------------Add Task------------------------------- */
 .add_task_button{
-  width: 10em;
-  height: 3em;
-  background: var(--orange);
-  color: var(--dark-blue);
+    width: 12em;
+    height: 3em;
+    margin-bottom: 1em;
+    margin-left: 0.5em;
+    background: var(--primary-color);
+    color: var(--secondary-color);
 }
-/* Styling for the modal */
+    /* Styling for the modal */
 .modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 5em;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
 }
+      
+    /* Styling for the form within the modal */
 
-/* Styling for the form within the modal */
-.task_form {
-  background-color: var(--primary-color);
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid var(--background-color);
-  width: 50em;
-  height: 25em;
+.task_form{
+    background-color: var(--primary-color);
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid var(--background-color);
+    width: 35em;
+    height: 25em;
+    bottom: 5em;
 }
-
 .task_form h2{
-  color: var(--background-color);
-  text-align: center;
+    color: var(--background-color);
+    text-align: center;
 }
-
-.task_input button{
-  padding: 10px 20px;
-  background-color: var(--primary-color);
-  color: #fff;
-  border: none;
-  position: fixed;
-  top: 45em;
-  left: 49em;
-  height: 3em;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+#taskForm {
+    display: none;
 }
+#taskFormTomorrow{
+    display: none;
+}
+ 
 .form_label{
-  font-size: large;
-  background-color:var(--primary-color) ;
-  color: var(--background-color);
+    font-size: large;
+    background-color:var(--primary-color) ;
+    color: var(--background-color);
+}
+input{
+    vertical-align: top;
 }
 input[type=text]{
-  width: 100%;
-  height: 5em;
-  background-color: var(--accent-color);
-  background-position: 10px 10px;
-  background-repeat: no-repeat;
-  padding-left: 30px;
-  border: #333 1px;
-  background-size: 20px;
-  background-image: url('svgs/notebook-svgrepo-com.png');
-  box-sizing: border-box;
+    width: 100%;
+    height: 5em;
+    background-color: var(--primary-color);
+    background-position: 10px 10px;
+    background-repeat: no-repeat;
+    padding-left: 30px;
+    border: #333 1px;
+    background-size: 20px;
+    background-image: url('svgs/notebook-svgrepo-com.png');
+    box-sizing: border-box;
 }
 input[type=textarea]{
-  width: 100%;
-  height: 10em;
-  text-align: justify;
-  background-color: var(--accent-color);
+    width: 100%;
+    height: 5em;
+    text-align: justify;
+    background-color: var(--primary-color);
 }
 input[type=submit]{
-  background-color: var(--background-color);
-  width: 6em;
+    background-color: var(--background-color);
+    width: 6em;
 }
 .add_task_submit{
-  top: 0;
-  left: 0;
-  position: relative;
+    top: 0;
+    left: 0;
+    position: relative;
 }
-
-.todos{
-  width: auto;
-  margin: auto;
+/* Tasks css */
+.task_container{
+    overflow: auto;
+    height: 50vh;
 }
-.todos li {
-  border-top: 1px solid #e5e5e5;
-  cursor: pointer;
-  font-size: 1.5rem;
-  padding: 1rem 2rem;
+.task{
+    width: 95%;
+    height: 5em;
+    border-radius: 4px;
+    background-color: var(--primary-color);
+    display: flex;
+    text-align: center;
+    margin: 10px;
+    color: var(--secondary-color);
 }
-
-.todos li.completed {
-  color: #b6b6b6;
-  text-decoration: line-through;
+.task:hover{
+    border: #fff solid 1px;
 }
-
-
-/* Dropdown Button */
-.dropbtn {
-  background-color: var(--primary-color);
-  color: var(--accent-color);
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
+.task_desc_short{
+    width: 50%;
 }
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: var(--primary-color);
+.task_desc_short h5{
+    margin: 0;
 }
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block;
+h5{
+    margin:5px ,0,0,0;
 }
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: var(--accent-color);
-  color: var(--primary-color);
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: var(--background-color);
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
-/* -------------------Checkbox---------- */
-.round_checkbox{
-  width: 1em;
-  height: 1em;
-  border: solid 1px var(--background-color);
-  border-radius: 50%;
-  display: inline;
-  margin: 1em;
-}
-.round_checkbox:hover{
-  border: #f1f1f1 solid 1px;
-}
-.round_checkbox:active{
-  background-color: var(--background-color);
-}
-.task_name{
-  margin: 1em;
-}
-
-/*---------------- Right container css-----------------*/
-.right_container{
-  width: 27em;
-  height: 100%;
-  background-color: var(--background-color);
-  border: var(--primary-color) solid 1px;
+.indivTask{
+    width: 100%;
+    display: flex;
 }
 .task_status_container{
-  display: flex;
-}
-.task_status{
-  width: 6em;
-  height: 3em;
-  background-color: var(--accent-color);
-  color: var(--background-color);
-  padding: 10px;
-  margin: 10px;
-  text-align: center;
-  border-radius: 4px;
-  left: 3rem;
-  position: relative;
-}
-.task_description{
-  background-color: var(--accent-color);
-  width: 25em;
-  height: 10em;
-  margin: 1em;
-}
-.footer{
-  left: 2.5em;
-  top: 14em;
-  position: relative;
-  width: 100%;
-
-}
-
-
-
-
-/* Right container end */
-
-
-/* ---------------------Profile page css--------------------- */
-  
-.profile_container{
-  display: flex;
-}
-  .profile_pic_container{
-    width: 25em;
-    height: 25em;
-    background-color: #1e90ff;
+    display: flex;
   }
-  .profile_pic_main{
-      height: 25em;
-      width: 25em;
-      border-radius: 50%;
-    }
-  .profile_record{
-    margin: auto;
+  .task_status{
+    width: 6em;
+    height: 3em;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    border-radius: 4px;
+    /* left: 2rem; */
     position: relative;
   }
-/* =-=---------------------------------------------------------------- */
+  .task_description{
+    background-color: var(--accent-color);
+    width: 25em;
+    height: 10em;
+    margin: 1em;
+  }
+  .footer{
+    left: 2.5em;
+    top: 14em;
+    position: relative;
+    width: 90%;
+  
+  }
+
+  /* ---------------------Productivity class css ---------------------------------*/
+  .productivity{
+    width: 80%;
+  }
+  .productivity h4{
+    margin-block-end: 0;
+    margin-left: 0.5em;
+  }
+
+  .dark-mode-div {
+    background-color: var(--secondary-color); /* Light mode background color */
+    color: #333; /* Light mode text color */
+  }
+  
 
 
 
+  /* css for profile page  */
 
-/*---------------------------------------------- Scrollbar */
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: var(--primary-color);
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: var(--background-color);
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: var(--accent-color);
-}
-/* ----------------------------------------------Scrollbar end */
+  .profile_record h1{
+    color: var(--accent-color);
+  }
