--- a/loginsystem/css/credentials.css
+++ b/loginsystem/css/credentials.css
@@ -1,12 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+
+
 
 *{
-   font-family: 'Poppins', sans-serif;
+   font-family: 'Coming Soon', cursive;
    margin:0; padding:0;
    box-sizing: border-box;
    outline: none; border:none;
    text-decoration: none;
-   background-color: #fd4f00;
+   /* background-color: #5C8374; */
 }
 
 .container{
@@ -69,14 +70,14 @@
    justify-content: center;
    padding:20px;
    padding-bottom: 60px;
-   background: #001233;
+   background: #121212;
 }
 
 .form-container form{
    padding:20px;
    border-radius: 5px;
    box-shadow: 0 5px 10px rgba(0,0,0,.1);
-   background: #fd4f00;
+   background: #121212;
    text-align: center;
    width: 500px;
 }
@@ -85,7 +86,7 @@
    font-size: 30px;
    text-transform: uppercase;
    margin-bottom: 10px;
-   color:#001233;
+   color:#1e90ff;
 }
 
 .form-container form input,
@@ -94,7 +95,7 @@
    padding:10px 15px;
    font-size: 17px;
    margin:8px 0;
-   background: #EFE0CA;
+   background: #E6E6FA;
    border-radius: 5px;
 }
 
@@ -103,26 +104,29 @@
 }
 
 .form-container form .form-btn{
-   background: #001233;
-   color:#EFE0CA;
+   background: #1e90ff;
+   color:#121212;
    text-transform: capitalize;
    font-size: 20px;
    cursor: pointer;
 }
 
 .form-container form .form-btn:hover{
-   background: #EFE0CA;
-   color:#001233;
+   background: #121212;
+   color:#1e90ff;
 }
 
 .form-container form p{
    margin-top: 10px;
    font-size: 20px;
-   color:#333;
+   color:#E6E6FA;
 }
 
 .form-container form p a{
    color:crimson;
+}
+.form-container form p a:hover{
+   color:#e3242b;
 }
 
 .form-container form .error-msg{
@@ -133,4 +137,15 @@
    border-radius: 5px;
    font-size: 20px;
    padding:10px;
+}
+.pattern{
+   position: fixed;
+  width: 100vw;
+  height: 100vh;
+  
+background-position: 0 0,29px 29px;
+background-color: #ccc;
+opacity: 0.8;
+background-size: 38px 38px;
+background-image:  repeating-linear-gradient(0deg, #1e4562, #1e4562 1.9000000000000001px, #ccc 1.9000000000000001px, #ccc);
 }
